--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "typescript": "^5.6.0",
     "vite": "^6.1.0",
     "vitest": "^3.0.0",
-    "vitest-environment-clarinet": "^2.3.0"
+    "vitest-environment-clarinet": "^2.3.0",
+    "@reown/walletkit": "^0.4.0",
+    "@walletconnect/utils": "^2.0.0",
+    "@walletconnect/core": "^2.0.0"
   }
 }
